[Feat] Implement works API and populate WorksView
